src/test/deca/syntax/valid/created/selector3.deca
class A{
	int methA(){
		return 2;
	}
}

{
	A a = new A();
	print(a.methA());
}
