src/test/deca/syntax/invalid/created/faux30.deca
class A{
	void methA(){
		return 2;
	}
}

{}
